configs/programs/vscodium/custom.css
/* stylelint-disable custom-property-pattern */

:root {
  --base: #080808;
  --gap: 5px;
  --radius: 8px;
}

.monaco-workbench {
  --vscode-tab-inactiveBackground: #181818 !important;
  --vscode-tab-activeBackground: #222 !important;

  background: var(--base) !important;
}

/* Add gap between panels */
.part {
  height: 100% !important;
  border-radius: var(--radius) !important;
}

.left {
  margin-right: var(--gap) !important;
}

.right {
  margin-left: var(--gap) !important;
}

/* custom top tabs */
.tabs-and-actions-container {
  background: #181818 !important;
}

.tab {
  border: 0 !important;
}

.tab.active {
  margin: 2px !important;
  margin-top: 0 !important;
  border-radius: 8px;
}

.editor-actions {
  background: #181818;
}

.composite.panel {
  padding: 0 !important;
}

.parts.panel > div.composite.title.has-composite-bar {
  height: 22px !important;
}

.panel {
  height: calc(100% - var(--gap)) !important;
  margin-top: 0 !important;
  padding: 5px !important;
}

.terminal {
  margin-left: 10px !important;
}

.monaco-workbench .xterm .xterm-scrollable-element {
  padding-left: 0 !important;
}

.content {
  width: 100% !important;
}

/* Move Notifications to the left */
.notifications-toasts {
  right: unset !important;
  left: 3px !important;
}

/* Evenly space out sidebar tabs */
.composite-bar-container,
.composite-bar,
.monaco-action-bar .action-item {
  flex: 1;
}

.monaco-action-bar .action-item .action-label::before {
  left: unset !important;
}

.monaco-action-bar .action-item .badge.compact .badge-content {
  right: calc(50% - 2em) !important;
}

/* Move open editor close button to the left */
.open-editors .monaco-list .monaco-list-row {
  flex-direction: row-reverse !important;
  padding-right: 12px !important;
  padding-left: 14px !important;
}

/* Remove sidebar Header */
.monaco-workbench .part.sidebar > .title {
  display: none !important;
}

/* Remove panel border top */
.monaco-workbench .part.panel.bottom .composite.title {
  border-top: none !important;
}

/* Code Lens Color by type */
.codelens-decoration a[title^=""] {
  color: #ff596b !important;

  &:hover {
    color: #ff7a88 !important;
  }
}

.codelens-decoration a[title^=""] {
  color: #fffb77 !important;

  &:hover {
    color: #fffc99 !important;
  }
}

.codelens-decoration a[title^=""] {
  color: #83bbff !important;

  &:hover {
    color: #a0ccff !important;
  }
}

.codelens-decoration a[title^=""] {
  color: #99ff82 !important;

  &:hover {
    color: #b3ff9f !important;
  }
}

/* 
Increases the thickness of the indentation guide and adds a tick between each
line on the guide 
*/
.monaco-editor .lines-content .core-guide-indent {
    box-shadow: 1.5px 0 1px 0 var(--indent-color) inset !important;
}

.monaco-editor .lines-content .core-guide-indent-active {
    box-shadow: 1.5px 0 1px 0 var(--indent-active-color) inset !important;
}

